# gatehouse-api

./: .env.example  .flake8  .gitignore  README.md  SEED_DATA_OIDC_EXTENSION.md  TOTP_TEST_PROPOSAL.md  manage.py  pyproject.toml  pytest.ini  quick_login_test.py  wsgi.py
app/: __init__.py  extensions.py
app/api/: __init__.py  oidc.py
app/exceptions/: __init__.py  auth_exceptions.py  base.py  validation_exceptions.py
app/middleware/: __init__.py  cors.py  security_headers.py
app/models/: __init__.py  audit_log.py  authentication_method.py  base.py  oidc_audit_log.py  oidc_authorization_code.py  oidc_client.py  oidc_jwks_key.py  oidc_refresh_token.py  oidc_session.py  oidc_token_metadata.py  organization.py  organization_member.py  session.py  user.py
app/schemas/: __init__.py  auth_schema.py  organization_schema.py  user_schema.py
app/services/: __init__.py  audit_service.py  auth_service.py  oidc_audit_service.py  oidc_jwks_service.py  oidc_service.py  oidc_session_service.py  oidc_token_service.py  organization_service.py  (+3 more)
config/: __init__.py  base.py  development.py  production.py  testing.py
docs/: OIDC.md  OIDC_TESTING.md  architecture.md  external-auth-api.md  oauth2-proxy-config.yaml
gatehouse_app/: __init__.py  extensions.py
migrations/: .gitkeep  001_create_oidc_tables.py  002_add_webauthn_support.py  env.py
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/: README.md  configure_oauth_provider.py  init_db.py  request_organizations.sh  seed_data.py
test-container/: docker-compose.yml  nginx.conf
tests/: conftest.py
(+79 files in other folders)
